# AiCheckBid_tauri

./: .gitignore  README.md  build-tauri-clean.ps1  index.html  package-lock.json  package.json  rust-toolchain.toml  sample.docx  vite.config.ts
.cargo/: config.toml
data/: license.json
docs/: acceptance-summary.json  acceptance-summary.md  docx-regression-baseline.json  docx-regression-summary.json  docx-regression-summary.md  final-regression-summary.json  final-regression-summary.md  old-new-rule-diff.json  old-new-rule-diff.md  parity-checklist.md  regression-baseline.json  rule-implementation-matrix.json  rule-implementation-matrix.md  rule-key-parity-clean.json  rule-key-parity-clean.md  rule-level-regression.json  rule-level-regression.md
rules/: set.ini  set_nopage.ini  title-presets.txt
scripts/: build-delivery.ps1  check-docx-regression-baseline.ps1  check-regression-baseline.ps1  compare-rule-implementation.ps1  finalize-delivery.ps1  repair-build-env.ps1  run-clean-rule-key-parity.ps1  run-docx-regression.ps1  run-final-regression.ps1  run-full-acceptance.ps1  run-rule-level-regression.ps1
set/: 词典1.doc  词典3.doc  词典4.doc
sidecar/DocParserSidecar/: DocParserSidecar.csproj  Program.cs
sidecar/DocParserSidecarNet48/: DocParserSidecarNet48.csproj  Program.cs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  license.rs  main.rs  models.rs  sidecar.rs
