[package]
name = "aicheckbid_tauri"
version = "0.1.0"
description = "AiCheckBid Next Desktop"
authors = ["team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "=1.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "=1.6.0", features = ["dialog-open", "dialog-confirm"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
